# AulaSense

./: CMakeLists.txt  README.md  gitfiles.gitignore  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  device_id.h  sensors.c  sensors.h  time_sync.c  time_sync.h  uploader.c  uploader.h  wifi.c  wifi.h
